# vault-pq

./: Cargo.toml  README.md  SECURITY.md
src/: error.rs  lib.rs  main.rs
src/cli/: audit.rs  bench.rs  combine.rs  decrypt.rs  encrypt.rs  keygen.rs  mod.rs  split.rs
src/crypto/: aead.rs  archive.rs  armor.rs  auditlog.rs  canary.rs  compress.rs  hkdf_util.rs  honeypot.rs  kdf.rs  kem.rs  mod.rs  pipeline.rs  polymorph.rs  rekey.rs  search.rs  selftest.rs  shamir.rs  sig.rs  stream.rs
src/deniable/: engine.rs  mod.rs
src/forensic/: mod.rs  secure_delete.rs  shred.rs
src/format/: header.rs  mod.rs  padding.rs
src/identity/: keypair.rs  mod.rs
src/license/: fingerprint.rs  key.rs  manager.rs  mod.rs
src/memory/: fallback.rs  mod.rs  unix.rs  windows.rs
src/metadata/: filename.rs  mod.rs  timestamp.rs
src/panel/: api.rs  mod.rs  server.rs
src/platform/: config.rs  entropy.rs  environment.rs  hardware.rs  mod.rs  whitelist.rs
src/testing/: behavioral_profile.rs  forensic_probe.rs  memory_probe.rs  mod.rs
tests/: integration.rs
