[package]
name = "vault"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Post-quantum hybrid file encryption with metadata protection"

[dependencies]
# === Core Crypto ===
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hkdf = "0.12"
sha2 = "0.10"

# === Post-Quantum ===
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# === Secure Memory ===
zeroize = { version = "1.8", features = ["derive"] }

# === Key Recovery ===
sharks = "0.5"

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# === CLI ===
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
rpassword = "7.3"

# === Utilities ===
rand = "0.8"
base64 = "0.22"
hex = "0.4"
blake3 = "1.5"
uuid = { version = "1.10", features = ["v4"] }
filetime = "0.2"
walkdir = "2.5"
thiserror = "1.0"
regex-lite = "0.1"
zstd = "0.13"
toml = "0.8"
tar = "0.4"
tempfile = "3.12"

# === Web Panel ===
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# === Platform-specific ===
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"


[dev-dependencies]
hex-literal = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1

[features]
default = ["xchacha20"]
xchacha20 = []
aes-ni = []
deniable = []
anti-forensic = []
full = ["xchacha20", "aes-ni", "deniable", "anti-forensic"]
